Added about.html and updated navigation

--- a/third.html
+++ b/third.html
@@ -1,13 +1,11 @@
-
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Second Page</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css">
     <style>
-      /* Add any custom styles here */
       .content {
         text-align: center;
         margin: 20px;
@@ -16,17 +14,10 @@
 </head>
 <body>
     <div class="container text-center">
-        <h1>Welcome to my Second Page!</h1>
-          <a href="index.html" class="btn btn-primary">Go Back to Home</a>
+        <h1>About Our Farm</h1>
+        <p>Learn more about our history, mission, and values.</p>
+        <p>We are dedicated to sustainable farming and providing fresh, organic products to our community.</p>
+        <a href="index.html" class="btn btn-primary">Back to Home</a>
     </div>
-
-    <p>We grow a variety of crops including:</p>
-    <ul>
-      <li>Potatoes</li>
-      <li>Wheat</li>
-      <li>Barley</li>
-      <li>Oats</li>
-    </ul>
-  </div>
 </body>
 </html>
